# map_divider

./: CMakeLists.txt  package.xml
config/: config_map_divider.yaml
data/: indoor_outdoor_raw.pcd  indoor_outdoor_wp.csv
include/map_divider/: map_divider.hpp
launch/: map_divider.launch.py
src/: map_divider.cpp
